--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.13",
     "sequelize": "^6.9.0",
