--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Klement BINAJ",
   "license": "ISC",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
