--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
