--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3-rc.0",
     "nodemon": "^2.0.15",
     "sequelize": "^6.9.0",
